# AMR

./: README.md
amr_description/: CMakeLists.txt  package.xml
amr_description/launch/: display.launch.xml
amr_description/meshes/: ball_caster_wheel_1.stl  ball_caster_wheel__1__1.stl  base_link.stl  lidar.stl  wheel_1.stl  wheel_2.stl
amr_description/rviz/: amr.rviz
amr_description/urdf/: materials.xacro  robot.urdf.xacro  slam_lidar_midplate_middle.gazebo  slam_lidar_midplate_middle.ros2control  slam_lidar_midplate_middle.xacro
gazebo_bringup/: CMakeLists.txt  package.xml
gazebo_bringup/config/: gazebo_bridge.yaml  slam_toolbox_params.yaml
gazebo_bringup/launch/: amr.launch.xml
gazebo_bringup/worlds/: empty_sensors.sdf  office.sdf  testing.sdf  warehouse.sdf
nav2_bringup/: CMakeLists.txt  package.xml
nav2_bringup/launch/: nav2.launch.xml
nav2_bringup/maps/: my_map.pgm  my_map.yaml
nav2_bringup/params/: nav2_params.yaml
