<?xml version="1.0"?>
<package format="3">
  <name>nav2_bringup</name>
  <version>0.0.1</version>
  <description>Nav2 launch and params for AMR</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>